Upload more pics and update talk

--- a/talk.ipynb
+++ b/talk.ipynb
@@ -348,16 +348,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "![Distribution](distribution.png)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -372,6 +367,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Enterprise](enterprise.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -379,6 +381,15 @@
    },
    "source": [
     "## Plus"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Soporte\n",
+    "* Asesoramiento\n",
+    "* Entrenamiento"
    ]
   },
   {
@@ -405,6 +416,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Distribution](distribution.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -412,6 +430,13 @@
    },
    "source": [
     "## Anaconda Enterprise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Enterprise](enterprise.png)"
    ]
   },
   {
@@ -427,6 +452,20 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![nbck1](nb-ext-kernel1.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![nbck2](nb-ext-kernel2.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -434,6 +473,20 @@
    },
    "source": [
     "## nb_conda"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![nbc1](nb-ext-conda1.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![nbc2](nb-ext-conda3.png)"
    ]
   },
   {
@@ -449,6 +502,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![cloud](cloug.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -456,6 +516,20 @@
    },
    "source": [
     "## nb_anacondacloud"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![nbac](nb-ext-acloud1.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![nbac](nb-ext-acloud4.png)"
    ]
   },
   {
@@ -507,7 +581,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
