More pics and update ipynb file

--- a/talk.ipynb
+++ b/talk.ipynb
@@ -76,6 +76,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![IPython](ipy_kernel_and_terminal.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -113,6 +120,36 @@
    },
    "source": [
     "### Jupyter Notebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Es un ambiente de computación interactivo que le permite al usuario escribir documentos (notebooks) que pueden incluir código, widgets interactivos, figuras, texto, ecuaciones, imágenes, video, etc."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![nb & components](notebook_components.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Jupyter Notebook (Componentes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Notebook app, la aplicación web interactiva que provee la UI para escribir y correr código interactivamente generando documentos autocontenidos (notebooks)\n",
+    "* Kernels, procesos independientes levantados por la app Notebook que corre el código provisto por el usuario y retorna (y muestra) los resultados (en forma de output a traves de la Notebook app)\n",
+    "* Documentos, artefactos autocontenidos que contienen una representación de todo el contenido visible en la Notebook app"
    ]
   },
   {
