--- a/talk.ipynb
+++ b/talk.ipynb
@@ -541,7 +541,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![cloud](cloug.png)"
+    "![cloud](cloud.png)"
    ]
   },
   {
@@ -603,6 +603,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -618,7 +619,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.1"
+  },
+  "livereveal": {
+   "autolaunch": true,
+   "scroll": true
   }
  },
  "nbformat": 4,
